fix h3,p and width-100, delete gap

--- a/src/styles/blocks/style-block-card.css
+++ b/src/styles/blocks/style-block-card.css
@@ -55,8 +55,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  gap: 60px;
-  width: 166px;
+  width: 100%;
   margin: 0 auto 16px;
 }
 
@@ -81,7 +80,7 @@
   align-items: center;
   background-color: #00acdc;
   height: 40px;
-  width: 166px;
+  width: 100%;
   border-radius: 5px;
   text-decoration: none;
   color: white;
@@ -92,7 +91,6 @@
   line-height: 16px;
   text-align: center;
   text-transform: uppercase;
-  margin: 0 auto 16px;
 }
 
 .card__link:hover {
