--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,7 +1,5 @@
 body,
-ul,
-h1,
-h2,
+h3,
 p {
   margin: 0;
 }
